# ListaDeCompras

./: .gitignore  build_run.sh  main.py  messages.json  mypy.ini  pyproject.toml
Docker/: api.dockerfile  compose.yaml  keycloak.dockerfile
Docker/init_data/: 01_setting_up_admin_schema.sql  02_setting_up_user_schema.sql  03_setting_up_defaults_schema.sql  10_populate_default_category.sql  11_populate_unit_type.sql  12_populate_default_product.sql  init.sql
RawSQL/: defaults.sql  init.sql  populate.py
Tests/: conftest.py  test_models.py  tests.http
Tests/test_models/: test_user_dto_model.py  test_user_models.py
Tests/test_routers/: test_user_router.py
alembic/: alembic.ini  env.py
alembic/versions/: 1b1a7862f988_migração_inicial.py
app/: api_configs.py  configs.py  main.py
app/Controllers/: base_controller.py  default_category_controller.py  unity_type_controller.py  user_controller.py
app/DataBase/: connection.py  connection_handler.py  querys.py
app/DataBase/models/: defualt_product_models.py  dto_models.py  token_model.py  version_model.py
app/DataBase/schemas/: base_schema.py  base_schemas.py  default_category_schema.py  default_product_schema.py  market_schema.py  product_list_schema.py  schemas.py  shopping_list_schema.py  shopping_log_schema.py  unity_type_schema.py  user_categories_schema.py  user_events.py  user_products_schema.py  user_schema.py
app/DataBase/schemas/admin_schemas/: __init__.py  admin_event_schema.py  admin_schema.py
app/DataBase/schemas/default_schemas/: __init__.py  default_category_schema.py  default_product_schema.py  default_unit_type_schema.py
app/DataBase/schemas/user_schemas/: __init__.py  product_list_schema.py  user_category_schema.py  user_event_schema.py  user_market_schema.py  user_product_schema.py  user_schema.py  user_shopping_list_schema.py  user_shopping_log_schema.py  user_unity_type_schema.py
app/DbConnection/: connection.py
app/Enums/: __init__.py  base_http_response.py  base_internal_exception.py  enums.py  http_exceptions.py  http_responses.py
app/InternalResponse/: base_internal_response.py  internal_errors.py  internal_success.py
app/Models/: connection.py  dto_models.py  models.py  version_model.py
app/Querys/: base_query.py  user_querys.py
app/Repositories/: base_repository.py  default_category_repository.py  default_products_repository.py  unity_type_repository.py  user_categories_repository.py  user_products_repository.py  user_repository.py  utils_repository.py
app/Routers/: auth_router.py  base_router.py  defaullt_products_router.py  default_category_controller.py  default_category_router.py  unity_type_controller.py  unity_type_router.py  user_controller.py  user_router.py  utils_router.py
app/Schemas/requests/: base_request.py
app/Schemas/responses/: base_response.py
app/Services/: __init__.py  auth_service.py  base_service.py  default_category_service.py  default_products_service.py  unity_type_service.py  user_service.py  utils_service.py
app/Utils/: global_functions.py  internal_types.py  types.py  utils.py
app/Validators/: base_validator.py  default_product_validator.py  user_validator.py
