[tool.poetry]
name = "simplesproject"
version = "0.1.0"
description = "MIT"
authors = ["Edimar Sá <edimar.sa@efscode.com.br>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.112.0" }
SQLAlchemy = "^2.0.32"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
uvicorn = "^0.30.6"
psycopg2 = "^2.9.9"
email-validator = "^2.2.0"
python-multipart = "^0.0.9"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
faker = "^27.0.0"
pytest = "^8.3.2"
mypy = "^1.11.1"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = 3.12
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
show_absolute_path = true
